# rfc5-examples

./: .gitignore  README.md  pyproject.toml
examples/example1.zarr/: zarr.json
examples/example1.zarr/level0/: zarr.json
examples/example1.zarr/level1/: zarr.json
examples/example1.zarr/level2/: zarr.json
examples/example1.zarr/level2/c/0/0/0/: 0
scripts/: create.py
